--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "morgan": "^1.2.2"
   },
   "devDependencies": {
+    "blanket": "^1.1.6",
     "chai": "^1.9.1",
+    "coveralls": "^2.11.1",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
     "jshint-stylish": "^0.4.0",
-    "mocha": "^1.21.3"
+    "mocha": "^1.21.3",
+    "mocha-lcov-reporter": "0.0.1"
   }
 }
